--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
           </ul>
           <div class="maincontant">
             <input
+              class="userInput"
               type="text"
               name="input"
-              id=""
+              id="input"
               placeholder="Hey! I'm a smart AI chatbot. Ask me anything! "
             />
             <button id="inspire">Inspire Me</button>
