--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
       <div>Text to Speech</div>
       <div>AI Characters</div>
       <div>Waifu2x</div>
+    </div>
+    <div class="pag3">
+      <div class="container">
+        <h2>About DeepAI</h2>
+        <p>DeepAI is an AI research and development company that provides a suite of machine learning tools and APIs focused on making AI accessible and useful for developers, researchers, and businesses. Founded in 2016, DeepAI offers a variety of services, including image and text generation, data analysis, and other machine learning models that help with tasks like computer vision, natural language processing, and generative AI.</p>
+      </div>
       <footer>
         <h2>Deep AI, Inc. ©</h2>
         <ul>
